--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
     <div class="container">
         <div class="column">
             <div class="form-container">
+                <div style="text-align: center;">
                 <h2>FULBITO</h2>
                 <h4>Nuevo Jugador</h4>            
                 <label for="nombre">Nombre:</label>
