--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="form-container">
                 <div style="text-align: center;">
                 <h1>F U L B I T O</h1>
-<p>Fulbito es una app que forma equipos de fútbol entre amigos lo mas equitativo posible. Utiliza un algoritmo que evalúa las habilidades de cada jugador para crear combinaciones justas, asegurando una distribución equilibrada en los equipos.</p>
+<h5><p>Fulbito es una app que te soluciona el problema de tener que armar equipos parejos para pasarla bien con tus amigos. Utiliza un algoritmo que evalúa las habilidades de cada jugador para crear combinaciones justas, asegurando una distribución equilibrada en los equipos.</p><h5>
                 <h4>Nuevo Jugador</h4>            
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre"><br><br>
