--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
                     <h4>Equipo 2</h4>
                     <select id="equipo2" multiple></select>
             </div>
-           <a href='https://cafecito.app/fulbito5' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_2.png 1x, https://cdn.cafecito.app/imgs/buttons/button_2_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_2_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_2.png' alt='Invitame un café en cafecito.app' /></a>
+        </div>
+        <div style="text-align: center;">
+           <a href='https://cafecito.app/fulbito5' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_5.png 1x, https://cdn.cafecito.app/imgs/buttons/button_5_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_5_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_5.png' alt='Invitame un café en cafecito.app' /></a>
             </div>
         </div>
     </div>
